@@ -19,7 +19,7 @@ URL: http://oscada.org
 %if %_vendor == "alt"
 %set_verify_elf_method no
 BuildRequires: glibc-devel gcc-c++-common libgd2-devel libpcre-devel libMySQL-devel libsqlite3-devel libsensors3-devel
-BuildRequires: libnet-snmp-devel libqt4-devel firebird-devel postgresql9.0-devel libportaudio2-devel libfftw3-devel
+BuildRequires: libnet-snmp-devel libqt4-devel firebird-devel postgresql9.1-devel libportaudio2-devel libfftw3-devel
 %else
 %define _initdir /etc/init.d
 %define _desktopdir %_datadir/applications
